- Rearrange options panel tabs