@@ -83,16 +83,20 @@ namespace VisibilityControl
             // Header width.
             float headerWidth = OptionsPanelManager<OptionsPanel>.PanelWidth - (Margin * 2f);
 
+            // Slider value formats.
+            UISliders.SliderValueFormat distanceFormat = new UISliders.SliderValueFormat(valueMultiplier: 1f, roundToNearest: 1f, numberFormat: "N0", suffix: "m");
+            UISliders.SliderValueFormat multiplierFormat = new UISliders.SliderValueFormat(valueMultiplier: 100f, roundToNearest: 1f, numberFormat: "N0", suffix: "%");
+
             // Building visibility options.
             UISpacers.AddTitle(scrollPanel, Margin, currentY, Translations.Translate("OPTIONS_BUILDINGS"));
             currentY += TitleMargin;
 
-            _buildingMinDistanceSlider = UISliders.AddPlainSliderWithIntegerValue(scrollPanel, LeftMargin, currentY, Translations.Translate("MIN_DISTANCE"), MinBuildingDistance, MaxBuildingDistance, 100f, BuildingMinDistance);
+            _buildingMinDistanceSlider = UISliders.AddPlainSliderWithValue(scrollPanel, LeftMargin, currentY, Translations.Translate("MIN_DISTANCE"), MinBuildingDistance, MaxBuildingDistance, 100f, BuildingMinDistance, distanceFormat);
             _buildingMinDistanceSlider.eventValueChanged += (c, value) => BuildingMinDistance = value;
             _buildingMinDistanceSlider.parent.tooltip = Translations.Translate("MIN_DISTANCE_TIP");
             currentY += SliderMargin;
 
-            _buildingMultSlider = UISliders.AddPlainSliderWithValue(scrollPanel, LeftMargin, currentY, Translations.Translate("DISTANCE_MULT"), MinBuildingMult, MaxBuildingMult, 0.5f, BuildingMultiplier);
+            _buildingMultSlider = UISliders.AddPlainSliderWithValue(scrollPanel, LeftMargin, currentY, Translations.Translate("DISTANCE_MULT"), MinBuildingMult, MaxBuildingMult, 0.5f, BuildingMultiplier, multiplierFormat);
             _buildingMultSlider.eventValueChanged += (c, value) => BuildingMultiplier = value;
             _buildingMultSlider.parent.tooltip = Translations.Translate("DISTANCE_MULT_TIP");
             currentY += SliderMargin;
@@ -101,12 +105,12 @@ namespace VisibilityControl
             UISpacers.AddTitleSpacer(scrollPanel, Margin, currentY, headerWidth, Translations.Translate("OPTIONS_NETS"));
             currentY += TitleMargin;
 
-            _netMinDistanceSlider = UISliders.AddPlainSliderWithIntegerValue(scrollPanel, LeftMargin, currentY, Translations.Translate("MIN_DISTANCE"), MinNetDistance, MaxNetDistance, 100f, NetMinDistance);
+            _netMinDistanceSlider = UISliders.AddPlainSliderWithValue(scrollPanel, LeftMargin, currentY, Translations.Translate("MIN_DISTANCE"), MinNetDistance, MaxNetDistance, 100f, NetMinDistance, distanceFormat);
             _netMinDistanceSlider.eventValueChanged += (c, value) => NetMinDistance = value;
             _netMinDistanceSlider.parent.tooltip = Translations.Translate("MIN_DISTANCE_TIP");
             currentY += SliderMargin;
 
-            _netMultSlider = UISliders.AddPlainSliderWithValue(scrollPanel, LeftMargin, currentY, Translations.Translate("DISTANCE_MULT"), MinNetMult, MaxNetMult, 0.5f, NetMultiplier);
+            _netMultSlider = UISliders.AddPlainSliderWithValue(scrollPanel, LeftMargin, currentY, Translations.Translate("DISTANCE_MULT"), MinNetMult, MaxNetMult, 0.5f, NetMultiplier, multiplierFormat);
             _netMultSlider.eventValueChanged += (c, value) => NetMultiplier = value;
             _netMultSlider.parent.tooltip = Translations.Translate("DISTANCE_MULT_TIP");
             currentY += SliderMargin;
@@ -115,12 +119,12 @@ namespace VisibilityControl
             UISpacers.AddTitleSpacer(scrollPanel, Margin, currentY, headerWidth, Translations.Translate("OPTIONS_VEHICLES"));
             currentY += TitleMargin;
 
-            _vehicleMinDistanceSlider = UISliders.AddPlainSliderWithIntegerValue(scrollPanel, LeftMargin, currentY, Translations.Translate("MIN_DISTANCE"), MinVehicleDistance, MaxVehicleDistance, 100f, VehicleMinDistance);
+            _vehicleMinDistanceSlider = UISliders.AddPlainSliderWithValue(scrollPanel, LeftMargin, currentY, Translations.Translate("MIN_DISTANCE"), MinVehicleDistance, MaxVehicleDistance, 100f, VehicleMinDistance, distanceFormat);
             _vehicleMinDistanceSlider.eventValueChanged += (c, value) => VehicleMinDistance = value;
             _vehicleMinDistanceSlider.parent.tooltip = Translations.Translate("MIN_DISTANCE_TIP");
             currentY += SliderMargin;
 
-            _vehicleMultSlider = UISliders.AddPlainSliderWithValue(scrollPanel, LeftMargin, currentY, Translations.Translate("DISTANCE_MULT"), MinVehicleMult, MaxVehicleMult, 0.5f, VehicleMultiplier);
+            _vehicleMultSlider = UISliders.AddPlainSliderWithValue(scrollPanel, LeftMargin, currentY, Translations.Translate("DISTANCE_MULT"), MinVehicleMult, MaxVehicleMult, 0.5f, VehicleMultiplier, multiplierFormat);
             _vehicleMultSlider.eventValueChanged += (c, value) => VehicleMultiplier = value;
             _vehicleMultSlider.parent.tooltip = Translations.Translate("DISTANCE_MULT_TIP");
             currentY += SliderMargin;
@@ -129,17 +133,17 @@ namespace VisibilityControl
             UISpacers.AddTitleSpacer(scrollPanel, Margin, currentY, headerWidth, Translations.Translate("OPTIONS_PROPS"));
             currentY += TitleMargin;
 
-            _propMinDistanceSlider = UISliders.AddPlainSliderWithIntegerValue(scrollPanel, LeftMargin, currentY, Translations.Translate("MIN_DISTANCE"), MinPropDistance, MaxPropDistance, 100f, PropMinDistance);
+            _propMinDistanceSlider = UISliders.AddPlainSliderWithValue(scrollPanel, LeftMargin, currentY, Translations.Translate("MIN_DISTANCE"), MinPropDistance, MaxPropDistance, 100f, PropMinDistance, distanceFormat);
             _propMinDistanceSlider.eventValueChanged += (c, value) => PropMinDistance = value;
             _propMinDistanceSlider.parent.tooltip = Translations.Translate("MIN_DISTANCE_TIP");
             currentY += SliderMargin;
 
-            _propMultSlider = UISliders.AddPlainSliderWithValue(scrollPanel, LeftMargin, currentY, Translations.Translate("DISTANCE_MULT"), MinPropMult, MaxPropMult, 0.5f, PropMultiplier);
+            _propMultSlider = UISliders.AddPlainSliderWithValue(scrollPanel, LeftMargin, currentY, Translations.Translate("DISTANCE_MULT"), MinPropMult, MaxPropMult, 0.5f, PropMultiplier, multiplierFormat);
             _propMultSlider.eventValueChanged += (c, value) => PropMultiplier = value;
             _propMultSlider.parent.tooltip = Translations.Translate("DISTANCE_MULT_TIP");
             currentY += SliderMargin;
 
-            _decalDistanceSlider = UISliders.AddPlainSliderWithValue(scrollPanel, LeftMargin, currentY, Translations.Translate("DECAL_DISTANCE"), MinPropDistance, MaxPropDistance, 100f, DecalFadeDistance);
+            _decalDistanceSlider = UISliders.AddPlainSliderWithValue(scrollPanel, LeftMargin, currentY, Translations.Translate("DECAL_DISTANCE"), MinPropDistance, MaxPropDistance, 100f, DecalFadeDistance, distanceFormat);
             _decalDistanceSlider.eventValueChanged += (c, value) => DecalFadeDistance = value;
             _decalDistanceSlider.parent.tooltip = Translations.Translate("DECAL_DISTANCE_TIP");
             currentY += SliderMargin;
@@ -148,7 +152,7 @@ namespace VisibilityControl
             UISpacers.AddTitleSpacer(scrollPanel, Margin, currentY, headerWidth, Translations.Translate("OPTIONS_TREES"));
             currentY += TitleMargin;
 
-            _treeDistanceSlider = UISliders.AddPlainSliderWithIntegerValue(scrollPanel, LeftMargin, currentY, Translations.Translate("TREE_DISTANCE"), MinTreeDistance, MaxTreeDistance, 100f, TreeLodDistance);
+            _treeDistanceSlider = UISliders.AddPlainSliderWithValue(scrollPanel, LeftMargin, currentY, Translations.Translate("TREE_DISTANCE"), MinTreeDistance, MaxTreeDistance, 100f, TreeLodDistance, distanceFormat);
             _treeDistanceSlider.eventValueChanged += (c, value) => TreeLodDistance = value;
             currentY += SliderMargin;
         }
