@@ -46,21 +46,26 @@ namespace VisibilityControl
             // Header width.
             float headerWidth = OptionsPanelManager<OptionsPanel>.PanelWidth - (Margin * 2f);
 
+            // Slider value formats.
+            UISliders.SliderValueFormat distanceFormat = new UISliders.SliderValueFormat(valueMultiplier: 1f, roundToNearest: 1f, numberFormat: "N0", suffix: "m");
+            UISliders.SliderValueFormat percentageFormat = new UISliders.SliderValueFormat(valueMultiplier: 100f, roundToNearest: 1f, numberFormat: "N0", suffix: "%");
+            UISliders.SliderValueFormat directPercentageFormat = new UISliders.SliderValueFormat(valueMultiplier: 1f, roundToNearest: 1f, numberFormat: "N0", suffix: "%");
+
             // Building visibility options.
             UISpacers.AddTitleSpacer(panel, Margin, currentY, headerWidth, Translations.Translate("OPTIONS_BUILDINGS"));
             currentY += TitleMargin;
 
-            _buildingFallbackDistanceSlider = UISliders.AddPlainSliderWithIntegerValue(panel, LeftMargin, currentY, Translations.Translate("FALLBACK_DISTANCE"), MinFallbackDistance, MaxFallbackDistance, 100f, BuildingFallbackRenderDistance);
+            _buildingFallbackDistanceSlider = UISliders.AddPlainSliderWithValue(panel, LeftMargin, currentY, Translations.Translate("FALLBACK_DISTANCE"), MinFallbackDistance, MaxFallbackDistance, 100f, BuildingFallbackRenderDistance, distanceFormat);
             _buildingFallbackDistanceSlider.eventValueChanged += (c, value) => BuildingFallbackRenderDistance = value;
             _buildingFallbackDistanceSlider.parent.tooltip = Translations.Translate("FALLBACK_DISTANCE_TIP");
             currentY += _buildingFallbackDistanceSlider.parent.height + Margin;
 
-            _buildingMinimumDistanceSlider = UISliders.AddPlainSliderWithIntegerValue(panel, LeftMargin, currentY, Translations.Translate("MIN_DISTANCE"), MinMinimumDistance, MaxMinimumDistance, 1f, BuildingMinimumDistance);
+            _buildingMinimumDistanceSlider = UISliders.AddPlainSliderWithValue(panel, LeftMargin, currentY, Translations.Translate("MIN_DISTANCE"), MinMinimumDistance, MaxMinimumDistance, 1f, BuildingMinimumDistance, distanceFormat);
             _buildingMinimumDistanceSlider.eventValueChanged += (c, value) => BuildingMinimumDistance = value;
             _buildingMinimumDistanceSlider.parent.tooltip = Translations.Translate("MIN_DISTANCE_TIP");
             currentY += _buildingMinimumDistanceSlider.parent.height + Margin;
 
-            _buildingLodTransitionSlider = UISliders.AddPlainSliderWithValue(panel, LeftMargin, currentY, Translations.Translate("LOD_TRANSITION"), MinLODTransitionMultiplier, MaxLODTransitionMultiplier, 0.05f, BuildingLODTransitionMultiplier);
+            _buildingLodTransitionSlider = UISliders.AddPlainSliderWithValue(panel, LeftMargin, currentY, Translations.Translate("LOD_TRANSITION"), MinLODTransitionMultiplier, MaxLODTransitionMultiplier, 0.05f, BuildingLODTransitionMultiplier, percentageFormat);
             _buildingLodTransitionSlider.eventValueChanged += (c, value) => BuildingLODTransitionMultiplier = value;
             _buildingLodTransitionSlider.parent.tooltip = Translations.Translate("LOD_TRANSITION_TIP");
             currentY += _buildingLodTransitionSlider.parent.height + Margin;
@@ -69,22 +74,22 @@ namespace VisibilityControl
             UISpacers.AddTitleSpacer(panel, Margin, currentY, headerWidth, Translations.Translate("OPTIONS_PROPS"));
             currentY += TitleMargin;
 
-            _propFallbackDistanceSlider = UISliders.AddPlainSliderWithIntegerValue(panel, LeftMargin, currentY, Translations.Translate("FALLBACK_DISTANCE"), MinFallbackDistance, MaxFallbackDistance, 1000f, PropFallbackRenderDistance);
+            _propFallbackDistanceSlider = UISliders.AddPlainSliderWithValue(panel, LeftMargin, currentY, Translations.Translate("FALLBACK_DISTANCE"), MinFallbackDistance, MaxFallbackDistance, 1000f, PropFallbackRenderDistance, distanceFormat);
             _propFallbackDistanceSlider.eventValueChanged += (c, value) => PropFallbackRenderDistance = value;
             _propFallbackDistanceSlider.parent.tooltip = Translations.Translate("FALLBACK_DISTANCE_TIP");
             currentY += _propFallbackDistanceSlider.parent.height + Margin;
 
-            _propMinimumDistanceSlider = UISliders.AddPlainSliderWithIntegerValue(panel, LeftMargin, currentY, Translations.Translate("MIN_DISTANCE"), MinMinimumDistance, MaxMinimumDistance, 1f, PropMinimumDistance);
+            _propMinimumDistanceSlider = UISliders.AddPlainSliderWithValue(panel, LeftMargin, currentY, Translations.Translate("MIN_DISTANCE"), MinMinimumDistance, MaxMinimumDistance, 1f, PropMinimumDistance, distanceFormat);
             _propMinimumDistanceSlider.eventValueChanged += (c, value) => PropMinimumDistance = value;
             _propMinimumDistanceSlider.parent.tooltip = Translations.Translate("MIN_DISTANCE_TIP");
             currentY += _propMinimumDistanceSlider.parent.height + Margin;
 
-            _propDistanceMultiplierSlider = UISliders.AddPlainSliderWithIntegerValue(panel, LeftMargin, currentY, Translations.Translate("DISTANCE_MULT"), MinDistanceMultiplier, MaxDistanceMultiplier, 1f, PropDistanceMultiplier);
+            _propDistanceMultiplierSlider = UISliders.AddPlainSliderWithValue(panel, LeftMargin, currentY, Translations.Translate("DISTANCE_MULT"), MinDistanceMultiplier, MaxDistanceMultiplier, 1f, PropDistanceMultiplier, directPercentageFormat);
             _propDistanceMultiplierSlider.eventValueChanged += (c, value) => PropDistanceMultiplier = value;
             _propDistanceMultiplierSlider.parent.tooltip = Translations.Translate("DISTANCE_MULT_TIP");
             currentY += _propDistanceMultiplierSlider.parent.height + Margin;
 
-            _propLodTransitionSlider = UISliders.AddPlainSliderWithValue(panel, LeftMargin, currentY, Translations.Translate("LOD_TRANSITION"), MinLODTransitionMultiplier, MaxLODTransitionMultiplier, 0.05f, PropLODTransitionMultiplier);
+            _propLodTransitionSlider = UISliders.AddPlainSliderWithValue(panel, LeftMargin, currentY, Translations.Translate("LOD_TRANSITION"), MinLODTransitionMultiplier, MaxLODTransitionMultiplier, 0.05f, PropLODTransitionMultiplier, percentageFormat);
             _propLodTransitionSlider.eventValueChanged += (c, value) => PropLODTransitionMultiplier = value;
             _propLodTransitionSlider.parent.tooltip = Translations.Translate("LOD_TRANSITION_TIP");
             currentY += _propLodTransitionSlider.parent.height + Margin;
